@@ -8,8 +8,9 @@
 
 static std::shared_ptr<spdlog::logger> logger_ = nullptr;
 
-// See eg https://spdlog.docsforge.com/v1.x/3.custom-formatting/#pattern-flags
-const std::string default_log_pattern = "%^[%Y-%m-%d %H:%M:%S.%e] [%n] [Process: %P] [%l] %v%$";
+// See eg https://spdlog.docsforge.com/v1.x/3.custom-formatting/#pattern-flags or
+// https://github.com/gabime/spdlog/wiki/3.-Custom-formatting
+const std::string default_log_pattern = "[%Y-%m-%d %H:%M:%S.%e] [%n] [Process: %P] [%l] %v";
 
 //' R Accessor Functions for spdlog Logger
 //'
@@ -36,6 +37,9 @@ const std::string default_log_pattern = "%^[%Y-%m-%d %H:%M:%S.%e] [%n] [Process:
 //' \sQuote{debug}, \sQuote{warn}, \sQuote{info}, \sQuote{warn}, \sQuote{error}, and
 //' \sQuote{critical}.  A message issued below the current threshold is not displayed whereas
 //' a message at or above the current threshold is displayed.  The default level is \sQuote{warn}.
+//'
+//' @seealso The logging pattern format is described in at the repo in the page
+//' \url{https://github.com/gabime/spdlog/wiki/3.-Custom-formatting}.
 //'
 //' @param name A character variable with the logging instance name, default value is \sQuote{default}.
 //' @param level A character variable with the default logging level, default value is \sQuote{warn}.
