@@ -1,3 +1,9 @@
+2022-12-27  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/interface.cpp: Add documentation reference for format pattern
+	* man/log_setup.Rd: Idem
+	* R/RcppExports.R: Idem
+
 2022-12-25  Dirk Eddelbuettel  <edd@debian.org>
 
 	* inst/include/spdl.h: Wrap three RcppSpdlog::*_stopwatch() functions
